# lgtm-bench

./: .env.example  .gitignore  CITATION.cff  LICENSE  README.md  RESULTS.md  pyproject.toml  smoke-test-audit-cmdi-xss.md
docs/: EXTENDING.md  METHODOLOGY.md  REPRODUCE.md  RUNBOOK.md  TECH_SPEC.md  blog-the-real-cost-of-cheap-code.md  examples.md  export.json  how-a-grade-works.md  index.html  methodology.html  poc-evidence-vulnerable.md  poc-report.html  poc-report.md  related-work.html  related-work.md  risk-stack.html
lgtm_bench/: __init__.py  categories.py  cli.py  engine.py  evidence.py  export.py  extract.py  grading.py  html_report.py  metrics.py  report.py  schema.py  store.py
results/: run-9af0f2288fdd.jsonl
results-published/: README.md  run-0b9839185649.regraded.jsonl  run-331ab1e81231.jsonl  run-331ab1e81231.regraded.jsonl  run-3cb9e32d6a5d.jsonl  run-3cb9e32d6a5d.regraded.jsonl  run-8e3746cbfc1a.regraded.jsonl  run-b2c3d1212dc2.jsonl  run-b2c3d1212dc2.regraded.jsonl  run-cdfef7c4b0a3.regraded.jsonl  run-e8a4541a372d.jsonl  run-e8a4541a372d.regraded.jsonl  run-f10fee11b727.regraded.jsonl
scripts/: run_poc.sh
smoke-test/: SMOKE_TEST_REPORT.md  run-6b34550e1a9a.jsonl  run-f6de0718b1ba.jsonl
tests/: test_corpus_cmdi_python.py  test_corpus_cmdi_typescript.py  test_corpus_go.py  test_corpus_rust.py  test_corpus_sql_typescript.py  test_corpus_xss_typescript.py  test_detector_corpus.py  test_e2e_mock.py  test_export.py  test_extract.py  test_extract_think.py  test_metrics.py  test_multilang.py  test_ollama_runner.py  test_regrade_safety.py  test_schema.py  (+8 more)
(+498 files in other folders)
