[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lgtm-bench"
version = "1.0.0"
description = "Benchmark for how often LLMs introduce security vulnerabilities in ordinary developer requests"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Sam Wallace" }]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "pyyaml>=6",
    "typer>=0.9",
    "sqlglot>=20",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
semgrep = ["semgrep>=1.60"]

[project.scripts]
lgtm = "lgtm_bench.cli:main"

[tool.setuptools.packages.find]
include = ["lgtm_bench*"]
